align items bottom fix

--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,7 @@ body {
   grid-auto-columns: 2fr 1fr;
   grid-auto-flow: column;
   gap: 24px;
+  align-items: baseline;
 }
 
 .grid-container-image img {
